2012-05-22  Taco Hoekwater  <taco@luatex.org>

	* luafontloader/fontforge/fontforge/splinesave.c,
	luafontloader/fontforge/fontforge/splinefont.h: drop parts of the
	Type1 saving routines (unused) to remove a compiler warning.

	* pdf/pdftypes.h, lua/limglib.c, image/epdf.h, image/writeimg.w,
	image/writejbig2.w, ptexlib.h: more off_t trouble.

2012-05-21  Taco Hoekwater  <taco@luatex.org>

	* tex/printing.w, lua/ltokenlib.c, lua/llanglib.c, lua/llualib.c,
	lua/lnodelib.c, lua/luainit.w, lua/ltexiolib.c,
	lua/lcallbacklib.c, lua/lstatslib.c, lua/ltexlib.c,
	lua/loslibext.c, lua/lkpselib.c, lua/luatoken.w, lua/llfslibext.c,
	lua/lfontlib.c, lua/luanode.w, lua/lpdflib.c, lua/luastuff.w:
	when loading both "ptexlib.h" and "lua/luatex-api.h", make sure
	that "ptexlib.h" is loaded first because that reads config.h
	which affects loading of system headers (via Large File Support,
	specifically).

2012-05-20  Khaled Hosny  <khaledhosny@eglug.org>

	* tex/mlist.w: fix "warning: 'ext' might be used uninitialized".

2012-05-18  Taco Hoekwater  <taco@luatex.org>

	* lua/ltexlib.c: fix a ConTeXt crash on `\endinput \end`.

2012-05-18  Khaled Hosny  <khaledhosny@eglug.org>

	* tex/commands.h, tex/commands.w, tex/maincontrol.h,
	tex/maincontrol.w, tex/mathcodes.h, tex/mathcodes.w, tex/scanning.w, 
	tex/texmath.w, tex/mlist.w: backport math relatex changes from 0.71
	* luatex.c: bump version to 0.70.1

2012-05-10  Hartmut Henkel  <hartmut@luatex.org>
	and Peter Breitenlohner  <peb@mppmu.mpg.de>

	* lua/lepdflib.cc: Adapt for poppler 0.19.4.

2012-05-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* lua/luainit.w (lua_initialize): Use WEB2CVERSION.
	* tex/printing.w (print_banner, log_banner): Same.

2012-02-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* luatex.h: Remove definition of WRITE_OUT, now in ../cpascal.h.

2012-01-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* image/writejbig2.w (getstreamlen): Change type to `off_t'.